5.4: ??/??/2020
	* CORE: Added LoggerFactory.setLogFactory() for supporting other log implementations and added NullLog.
	* JDBC: Added setLoginTimeoutSecs(...) method to set the underlying DriverManager for the connection sources.
	* CORE: Migrated the internal logging code to SimpleLogging.
	* JDBC: Fixed NPE in JdbcSingleConnectionSource because of early initialization.  Thanks to Nexxxt99.
	* JDBC: Fixed problem in Postgresql where mixed case sequence names aren't handled.  Thanks to Nick.
	* JDBC: Added database dependent login-timeout seconds setting to the JdbcConnectionSource. 

5.3: 12/8/2020
	* CORE: More improvements to the TransactionManager connection and savepoint handling.
	* CORE: Added a getInternalConnection() method to DatabaseConnection to access underlying objects.
	* CORE: Added support for ORDER BY ... NULLS FIRST and LAST.  May not be supported by all database types.
	* CORE: Added optimization to AND and OR queries to reduce the parens in the generated query.  Thanks to devjta.
	* CORE: Removed some extraneous spaces from generated queries.
	* CORE: Added missing wiring for the TIME_STAMP_STRING data type for storing Timestamp type as a string.
	* CORE: Added support for OneToMany JPA annotation. Thanks to Bo98.
	* JDBC: Update the DB2 driver class.  Thanks to mauro-palumbo.
	* JDBC: Added support for create table if not exists for HSQLDB versions 2.3.X and greater.  Thanks to lukewhitt.
	* JDBC: Fixed a problem with H2's handling of boolean fields.
	* JDBC: Fixed the log4j logger classes broken in 5.2.  Also moved them over to core.  Thanks to MarcMil.

5.2: 11/14/2020
	* JDBC: Refactored the JDBC package to make it java9 compliant by moving all classes under jdbc subpackage.
	* CORE: Added support for @DatabaseField(readOnly) boolean for returning non-column fields.
	* CORE: Added @DatabaseField(fullColumnDefinition) for fully describing a column as opposed to columnDefinition.