@@ -25,7 +25,8 @@ import com.j256.ormlite.table.TableInfo;
 public class UpdateBuilder<T, ID> extends StatementBuilder<T, ID> {
 
 	private List<Clause> updateClauseList = null;
-	// NOTE: anything added here should be added to the clear() method below
+	private Long limit;
+	// NOTE: anything added here should be added to the reset() method below
 
 	public UpdateBuilder(DatabaseType databaseType, TableInfo<T, ID> tableInfo, Dao<T, ID> dao) {
 		super(databaseType, tableInfo, dao, StatementType.UPDATE);
@@ -36,7 +37,7 @@ public class UpdateBuilder<T, ID> extends StatementBuilder<T, ID> {
 	 * the where or make other calls you will need to re-call this method to re-prepare the statement for execution.
 	 */
 	public PreparedUpdate<T> prepare() throws SQLException {
-		return super.prepareStatement(null, false);
+		return super.prepareStatement(limit, false);
 	}
 
 	/**
@@ -116,10 +117,19 @@ public class UpdateBuilder<T, ID> extends StatementBuilder<T, ID> {
 		return dao.update(prepare());
 	}
 
+	/**
+	 * Limit the rows affected to maxRows maximum number of rows. Set to null for no limit (the default).
+	 */
+	public UpdateBuilder<T, ID> limit(Long maxRows) {
+		limit = maxRows;
+		return this;
+	}
+
 	@Override
 	public void reset() {
 		super.reset();
 		updateClauseList = null;
+		limit = null;
 	}
 
 	@Override
@@ -128,9 +138,12 @@ public class UpdateBuilder<T, ID> extends StatementBuilder<T, ID> {
 			throw new IllegalArgumentException("UPDATE statements must have at least one SET column");
 		}
 		sb.append("UPDATE ");
-		if (tableInfo.getSchemaName() != null && tableInfo.getSchemaName().length() > 0){
+		if (tableInfo.getSchemaName() != null && tableInfo.getSchemaName().length() > 0) {
 			databaseType.appendEscapedEntityName(sb, tableInfo.getSchemaName());
 			sb.append('.');
+		}
+		if (databaseType.isLimitAfterUpdateSupported()) {
+			appendLimit(sb);
 		}
 		databaseType.appendEscapedEntityName(sb, tableInfo.getTableName());
 		sb.append(" SET ");
@@ -147,7 +160,9 @@ public class UpdateBuilder<T, ID> extends StatementBuilder<T, ID> {
 
 	@Override
 	protected void appendStatementEnd(StringBuilder sb, List<ArgumentHolder> argList) {
-		// noop
+		if (databaseType.isLimitUpdateAtEndSupported()) {
+			appendLimit(sb);
+		}
 	}
 
 	private void addUpdateColumnToList(String columnName, Clause clause) {
@@ -155,5 +170,11 @@ public class UpdateBuilder<T, ID> extends StatementBuilder<T, ID> {
 			updateClauseList = new ArrayList<Clause>();
 		}
 		updateClauseList.add(clause);
+	}
+
+	private void appendLimit(StringBuilder sb) {
+		if (limit != null) {
+			databaseType.appendUpdateLimitValue(sb, limit);
+		}
 	}
 }
