@@ -1,7 +1,8 @@
 5.4: ??/??/2020
 	* CORE: Added LoggerFactory.setLogFactory() for supporting other log implementations and added NullLog.
-	* JDBC: Added setLoginTimeoutSecs(...) method to set the underlying DriverManager for the connection sources.
 	* CORE: Migrated the internal logging code to SimpleLogging.
+	* CORE: Updated H2 version which shook lose a couple of issues in tests.
+	* CORE: Added UPDATE and DELETE database-dependent support for TOP and LIMIT.  Thanks to juur.
 	* JDBC: Fixed NPE in JdbcSingleConnectionSource because of early initialization.  Thanks to Nexxxt99.
 	* JDBC: Fixed problem in Postgresql where mixed case sequence names aren't handled.  Thanks to Nick.
 	* JDBC: Added database dependent login-timeout seconds setting to the JdbcConnectionSource. 
